tests/should_fail/let_destructure_arity_4_on_2.nv
module test
// let destructure: 4-element pattern on 2-element tuple
let (a, b, c, d) = (1, 2)
